--- a/apple_ceos/package.json
+++ b/apple_ceos/package.json
@@ -12,6 +12,7 @@
     "express": "~4.16.1",
     "express-es6-template-engine": "^2.1.9",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "pg-promise": "^9.3.3"
   }
 }
